--- a/CV.html
+++ b/CV.html
@@ -4,3 +4,10 @@
   <title>My Resume</title>
 </head>
 <body>
+
+	 <h1>Manya Rudresh</h1>
+  <p><b>Email:</b> manya@example.com</p>
+  <p><b>Phone:</b> +91 9876543210</p>
+  <p><b>LinkedIn:</b> linkedin.com/in/manya</p>
+  <hr>
+
