--- a/CV.html
+++ b/CV.html
@@ -10,4 +10,12 @@
   <p><b>Phone:</b> +91 9876543210</p>
   <p><b>LinkedIn:</b> linkedin.com/in/manya</p>
   <hr>
+  <h2>Career Objective</h2>
+  <p>Enthusiastic Computer Science student with a strong foundation in programming and web development. Eager to learn and contribute to real-world projects.</p>
+
+  <h2>Education</h2>
+  <ul>
+    <li><b>B.Tech - Computer Science</b>, Amity University Bangalore (2022 - 2026)</li>
+    <li><b>PUC</b>, ABC College, Bangalore (2020 - 2022)</li>
+  </ul>
 
