--- a/CV.html
+++ b/CV.html
@@ -13,11 +13,15 @@
   <h2>Career Objective</h2>
   <p>Enthusiastic Computer Science student with a strong foundation in programming and web development. Eager to learn and contribute to real-world projects.</p>
 
-  <h2>Education</h2>
-  <ul>
-    <li><b>B.Tech - Computer Science</b>, Amity University Bangalore (2022 - 2026)</li>
-    <li><b>PUC</b>, ABC College, Bangalore (2020 - 2022)</li>
-  </ul>
+  <h2>Qualifications</h2>
+<table border="1" cellpadding="8" cellspacing="0">
+  <tr>
+    <th>Degree</th>
+    <th>Institution</th>
+    <th>Board/University</th>
+    <th>Year</th>
+    <th>Percentage/CGPA</th>
+  </tr>
 
 
 
