--- a/CV.html
+++ b/CV.html
@@ -22,6 +22,13 @@
     <th>Year</th>
     <th>Percentage/CGPA</th>
   </tr>
+   <tr>
+    <td>B.Tech - Computer Science</td>
+    <td>Amity University, Bangalore</td>
+    <td>Amity University</td>
+    <td>2022 - 2026</td>
+    <td>8.5 CGPA</td>
+  </tr>
 
 
 
