--- a/CV.html
+++ b/CV.html
@@ -29,6 +29,14 @@
     <td>2022 - 2026</td>
     <td>8.5 CGPA</td>
   </tr>
+    <tr>
+    <td>PUC (Class 12)</td>
+    <td>ABC College, Bangalore</td>
+    <td>State Board</td>
+    <td>2020 - 2022</td>
+    <td>85%</td>
+  </tr>
+
 
 
 
