--- a/CV.html
+++ b/CV.html
@@ -36,7 +36,23 @@
     <td>2020 - 2022</td>
     <td>85%</td>
   </tr>
+  <tr>
+    <td>SSLC (Class 10)</td>
+    <td>XYZ School, Bangalore</td>
+    <td>CBSE</td>
+    <td>2019 - 2020</td>
+    <td>90%</td>
+  </tr>
+</table>
 
+<h2>Hobbies</h2>
+<ul>
+  <li>Reading tech blogs and articles</li>
+  <li>Drawing and sketching</li>
+  <li>Playing badminton</li>
+  <li>Watching science documentaries</li>
+  <li>Exploring new programming languages</li>
+</ul>
 
 
 
