--- a/CV.html
+++ b/CV.html
@@ -53,6 +53,21 @@
   <li>Watching science documentaries</li>
   <li>Exploring new programming languages</li>
 </ul>
+<h2>Skills</h2>
+
+<h3>Technical Skills</h3>
+<ul>
+  <li>C, Python, JavaScript</li>
+  <li>HTML, CSS</li>
+  <li>MySQL (Basics)</li>
+</ul>
+
+<h3>Tools & Platforms</h3>
+<ul>
+  <li>Git, GitHub</li>
+  <li>VS Code, Turbo C</li>
+  <li>MS PowerPoint, MS Word</li>
+</ul>
 
 
 
